# floz

./: .env  Cargo.toml  DB.md  Rocket.toml  create_tables.sql  floz.db  hydrate_tables.sql  justfile
client/: package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.app.json  vite.config.ts
client/src/: App.svelte
src/: db.rs  main.rs  question.rs
static/: index.html
static/assets/: index-9mb52ZKd.js  index-Bd1EPir2.js  index-BvKtjtGy.css
