[package]
name = "floz"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_sqlite"]
